Add to the 'limpar' class, where its responsibility is to clean the text fields and finalize the project code.